Apply the patch from Nishant Joshi for TUSCANY-2219. Thank you for the patch!
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@647238 13f79535-47bb-0310-9956-ffa450edef68